加作答結果的網頁，而且整理框

--- a/題庫/templates/題庫/框.html
+++ b/題庫/templates/題庫/框.html
@@ -9,7 +9,10 @@
 
 <body>
     <!-- SIDEBAR -->
-    <div id="sidebar"> {% block sidebar %}{% endblock %} </div>
+    <div id="sidebar"> {% block sidebar %}
+    <a href='{% url '看作答紀錄' %}'>看作答紀錄</a>
+    <a href='{% url '練習' %}'>練習</a>
+    {% endblock %} </div>
 
     <div id="container">
 
