--- a/題庫/templates/題庫/作答結果.html
+++ b/題庫/templates/題庫/作答結果.html
@@ -1,19 +1,24 @@
 {% extends "題庫/框.html" %}
 
 {% block 網頁內容 %}
-	<p> 總題數：{{ 總題數 }}</p>
-	<p> 答錯題數：{{ 答錯題數 }}</p>
-	<p>
-	答錯題目：
-    {% for 題號 in 答錯 %}
-    	<a href='{% url '看解釋' 題號 %}' target='_blank'>{{ 題號 }}</a>
-    {% endfor %}
-    </p>
-    
-	<p>
-	答對題目：
-    {% for 題號 in 答對 %}
+    {% for 作答紀錄 in 作答紀錄陣列 %}
+		<p> 作答時間：{{ 作答紀錄.作答時間 | date:'Y/m/d H:i' }}</p>
+		<p> 總題數：{{ 作答紀錄.總題數 }}</p>
+		<p> 答錯題數：{{ 作答紀錄.答錯題數 }}</p>
+		<p>
+		答錯題目：
+	    {% for 題號 in 作答紀錄.答錯題目陣列 %}
+	    	<a href='{% url '看解釋' 題號 %}' target='_blank'>{{ 題號 }}</a>
+	    {% endfor %}
+	    </p>
+	    
+		<p>
+		答對題目：
+	    {% for 題號 in 作答紀錄.答對題目陣列 %}
+	    	<a href='{% url '看解釋' 題號 %}' target='_blank'>{{ 題號 }}</a>
+	    {% endfor %}
     	<input type='hidden' name='id[{{forloop.counter0}}]' value='{{題目.題號}}'>
+    	<hr/>
     {% endfor %}
     </p>
 {% endblock %}
