加管理員的介面

--- a/題庫/templates/題庫/作答結果.html
+++ b/題庫/templates/題庫/作答結果.html
@@ -1,6 +1,20 @@
 {% extends "題庫/框.html" %}
 
 {% block 網頁內容 %}
+	{% if 作答狀況陣列 %}
+		<h3>管理員介面：</h3>
+		<table>
+		{% for 作答紀錄 in 作答狀況陣列 %}
+			<tr>
+			<td> {{ 作答紀錄.使用者名 }}</td>
+			<td> 作答時間：{{ 作答紀錄.作答時間 | date:'Y/m/d H:i' }}</td>
+			<td> 總題數：{{ 作答紀錄.總題數 }}</td>
+			<td> 答錯題數：{{ 作答紀錄.答錯題數 }}</td>
+			</tr>
+	    {% endfor %}
+	    </table>
+    	<hr/>
+   	{% endif %}
     {% for 作答紀錄 in 作答紀錄陣列 %}
 		<p> 作答時間：{{ 作答紀錄.作答時間 | date:'Y/m/d H:i' }}</p>
 		<p> 總題數：{{ 作答紀錄.總題數 }}</p>
