--- a/題庫/templates/題庫/作答結果.html
+++ b/題庫/templates/題庫/作答結果.html
@@ -2,7 +2,7 @@
 
 {% block 網頁內容 %}
 	{% if 作答狀況陣列 %}
-		<h3>管理員介面：</h3>
+		<h3>管理員介面</h3>
 		<table>
 		{% for 作答紀錄 in 作答狀況陣列 %}
 			<tr>
@@ -15,6 +15,7 @@
 	    </table>
     	<hr/>
    	{% endif %}
+   	<h3>我的作答紀錄</h3>
     {% for 作答紀錄 in 作答紀錄陣列 %}
 		<p> 作答時間：{{ 作答紀錄.作答時間 | date:'Y/m/d H:i' }}</p>
 		<p> 總題數：{{ 作答紀錄.總題數 }}</p>
