--- a/題庫/templates/題庫/框.html
+++ b/題庫/templates/題庫/框.html
@@ -5,6 +5,7 @@
     <title>{% block 標題 %}環境教育擂臺{% endblock %}</title>
     {% block extrahead %}{% endblock %}
     {% load staticfiles %}
+	<link rel="stylesheet" type="text/css" href="{% static '題庫/版面.css' %}" />
 </head>
 
 <body>
