--- a/題庫/static/題庫/版面.css
+++ b/題庫/static/題庫/版面.css
@@ -1,4 +1,14 @@
 body
 {
 	font-size: 150%;
+    background-color:#131314;
+    color:#6b6b6b;
 }
+.li01 {
+	margin-top:20px;
+	color}
+ul {
+	list-style:none;
+}
+li {
+	padding:10px 0 0 0;}
