--- a/題庫/templates/題庫/解釋.html
+++ b/題庫/templates/題庫/解釋.html
@@ -3,12 +3,12 @@
 {% block 網頁內容 %}
 	<p> 題號：{{ 題目.題號 }}</p>
 	<p> 級別：{{ 題目.級別 }}</p>
-	<p> 題目：{{ 題目.題目 }}</p>
+	<p class="p-題目"> 題目：{{ 題目.題目 }}</p>
 	<p> 選項1：{{ 題目.選項1 }}</p>
 	<p> 選項2：{{ 題目.選項2 }}</p>
 	<p> 選項3：{{ 題目.選項3 }}</p>
 	<p> 選項4：{{ 題目.選項4 }}</p>
 	<hr/>
-	<p> 解析：{{ 題目.解析 }}</p>
-	<p> 答案：{{ 題目.答案 }}</p>
+	<p class="p-解析">解析：<a href="#" id="a-解析">{{ 題目.解析 }}</a></p>
+	<p class="p-答案">答案：<a href="#" id="a-答案">{{ 題目.答案 }}</a></p>
 {% endblock %}
