--- a/題庫/static/題庫/版面.css
+++ b/題庫/static/題庫/版面.css
@@ -9,12 +9,12 @@ a, a:link {
 a:visited {color:#aa0000}
 .li01 {
 	margin-top:20px;
-	color}
+	color:#ffffff;
+}
 ul {
 	list-style:none;}
 li {
 	padding:10px 0 0 0;
-	color:#ffffff;
 }
 .p-題目 {
 	font-size:150%;
